Bug 228326 - crash trying to create a new tag
Summary: crash trying to create a new tag
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-24 16:16 UTC by Jaime Torres
Modified: 2012-06-27 10:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaime Torres 2010-02-24 16:16:13 UTC
Application: digikam (1.2.0 (rev.: 1095487))
KDE Platform Version: 4.4.63 (KDE 4.4.63 (KDE 4.5 >= 20100209)) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-3-desktop x86_64

-- Information about the crash:
- What I was doing when the application crashed:

trunk from today:

start digikam, go to main menu, select Tag, New,   and crash.. 


The crash can be reproduced every time.

 -- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f337bef17c0 (LWP 9131))]

Thread 15 (Thread 0x7f336802e710 (LWP 9132)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f3374c6110b in wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00000000007523f8 in Digikam::ScanController::run (this=0xc94c00) at /g/kde4svn/extragear/graphics/digikam/digikam/scancontroller.cpp:502
#4  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#5  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#6  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 14 (Thread 0x7f336430a710 (LWP 9134)):
#0  0x00007fff265758f4 in clock_gettime ()
#1  0x00007f336d221318 in clock_gettime () from /lib64/librt.so.1
#2  0x00007f3374d74a1f in qt_gettime () at /g/kde4svn/kde-qt/src/corelib/kernel/qcore_unix.cpp:111
#3  0x00007f3374d78b1d in QTimerInfoList::updateCurrentTime (this=0x1) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:340
#4  0x00007f3374d79a03 in QEventDispatcherUNIXPrivate::doSelect (this=0x12f0c70, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:181
#5  0x00007f3374d7ad1b in QEventDispatcherUNIX::processEvents (this=0xdbb360, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:920
#6  0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#7  0x00007f3374d4dddd in QEventLoop::exec (this=0x7f3364309d50, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#8  0x00007f3374c5d7d6 in QThread::exec (this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread.cpp:487
#9  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#10 0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#11 0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7f3362c60710 (LWP 9135)):
#0  0x00007fff265758f4 in clock_gettime ()
#1  0x00007f336d221318 in clock_gettime () from /lib64/librt.so.1
#2  0x00007f3374d74a1f in qt_gettime () at /g/kde4svn/kde-qt/src/corelib/kernel/qcore_unix.cpp:111
#3  0x00007f3374d78b1d in QTimerInfoList::updateCurrentTime (this=0x1) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:340
#4  0x00007f3374d79a03 in QEventDispatcherUNIXPrivate::doSelect (this=0x12f0280, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:181
#5  0x00007f3374d7ad1b in QEventDispatcherUNIX::processEvents (this=0xec49c0, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:920
#6  0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#7  0x00007f3374d4dddd in QEventLoop::exec (this=0x7f3362c5fd50, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#8  0x00007f3374c5d7d6 in QThread::exec (this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread.cpp:487
#9  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#10 0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#11 0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7f336242c710 (LWP 9136)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f3374c6110b in wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00007f33789dad02 in Digikam::LoadSaveThread::run (this=0xee3f50) at /g/kde4svn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#4  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#5  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#6  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7f3361c2b710 (LWP 9137)):
#0  0x00007fff265758f4 in clock_gettime ()
#1  0x00007f336d221318 in clock_gettime () from /lib64/librt.so.1
#2  0x00007f3374d74a1f in qt_gettime () at /g/kde4svn/kde-qt/src/corelib/kernel/qcore_unix.cpp:111
#3  0x00007f3374d78b1d in QTimerInfoList::updateCurrentTime (this=0x1) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:340
#4  0x00007f3374d79a03 in QEventDispatcherUNIXPrivate::doSelect (this=0x130c060, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:181
#5  0x00007f3374d7ad1b in QEventDispatcherUNIX::processEvents (this=0xe00e90, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:920
#6  0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#7  0x00007f3374d4dddd in QEventLoop::exec (this=0x7f3361c2ad50, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#8  0x00007f3374c5d7d6 in QThread::exec (this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread.cpp:487
#9  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#10 0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#11 0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7f336142a710 (LWP 9138)):
#0  0x00007fff265758f4 in clock_gettime ()
#1  0x00007f336d221318 in clock_gettime () from /lib64/librt.so.1
#2  0x00007f3374d74a1f in qt_gettime () at /g/kde4svn/kde-qt/src/corelib/kernel/qcore_unix.cpp:111
#3  0x00007f3374d78b1d in QTimerInfoList::updateCurrentTime (this=0x1) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:340
#4  0x00007f3374d79a03 in QEventDispatcherUNIXPrivate::doSelect (this=0x130b670, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:181
#5  0x00007f3374d7ad1b in QEventDispatcherUNIX::processEvents (this=0xe7c640, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:920
#6  0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#7  0x00007f3374d4dddd in QEventLoop::exec (this=0x7f3361429d50, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#8  0x00007f3374c5d7d6 in QThread::exec (this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread.cpp:487
#9  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#10 0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#11 0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f3358b89710 (LWP 9139)):
#0  0x00007f33749d6649 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f335eac2621 in metronom_sync_loop () from /usr/lib64/libxine.so.1
#2  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#3  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f335774d710 (LWP 9140)):
#0  0x00007f33749d6649 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f335eacde19 in interruptable_sleep () from /usr/lib64/libxine.so.1
#2  0x00007f335ead0581 in video_out_loop () from /usr/lib64/libxine.so.1
#3  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#4  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f3356f4c710 (LWP 9141)):
#0  0x00007f3373d57c63 in select () from /lib64/libc.so.6
#1  0x00007f3374d74b16 in qt_safe_select(int, <anonymous struct> *, <anonymous struct> *, <anonymous struct> *, const timeval *) (nfds=31, fdread=0x186b6b0, fdwrite=0x186b948, fdexcept=0x186bbe0, 
    orig_timeout=0x0) at /g/kde4svn/kde-qt/src/corelib/kernel/qcore_unix.cpp:143
#2  0x00007f3374d79b39 in QEventDispatcherUNIXPrivate::doSelect (this=0x186b4f0, flags=<value optimized out>, timeout=<value optimized out>)
    at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:218
#3  0x00007f3374d7ad1b in QEventDispatcherUNIX::processEvents (this=0x1396b90, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventdispatcher_unix.cpp:920
#4  0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007f3374d4dddd in QEventLoop::exec (this=0x7f3356f4bce0, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#6  0x00007f3374c5d7d6 in QThread::exec (this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread.cpp:487
#7  0x00007f335ed567d6 in Phonon::Xine::XineThread::run (this=0x186ae80) at /g/kde4svn/kdesupport/phonon/xine/xinethread.cpp:143
#8  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#9  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#10 0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f3356541710 (LWP 9144)):
#0  0x00007f3373d555b3 in poll () from /lib64/libc.so.6
#1  0x00007f3356547c4e in ao_alsa_handle_event_thread () from /usr/lib64/xine/plugins/1.27/xineplug_ao_out_alsa.so
#2  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#3  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f3355d40710 (LWP 9145)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f335ead3673 in ao_loop () from /usr/lib64/libxine.so.1
#2  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#3  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f335353e710 (LWP 9146)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f3374c6110b in wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00007f33789dad02 in Digikam::LoadSaveThread::run (this=0x1b1e330) at /g/kde4svn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#4  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#5  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#6  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f3352d3d710 (LWP 9153)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f3374c6110b in wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00007f33789dad02 in Digikam::LoadSaveThread::run (this=0x2e97370) at /g/kde4svn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#4  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#5  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#6  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f3350538710 (LWP 9154)):
#0  0x00007f33749d62dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f3374c6110b in wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00007f33789dad02 in Digikam::LoadSaveThread::run (this=0x2f65ca0) at /g/kde4svn/extragear/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#4  0x00007f3374c5ff1b in QThreadPrivate::start (arg=<value optimized out>) at /g/kde4svn/kde-qt/src/corelib/thread/qthread_unix.cpp:248
#5  0x00007f33749d18ed in start_thread () from /lib64/libpthread.so.0
#6  0x00007f3373d5e73d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f337bef17c0 (LWP 9131)):
[KCrash Handler]
#5  Digikam::Album::isRoot (this=0x0) at /g/kde4svn/extragear/graphics/digikam/digikam/album.cpp:229
#6  0x0000000000759844 in Digikam::TagEditDlg::TagEditDlg (this=0x6213120, parent=<value optimized out>, album=<value optimized out>, create=<value optimized out>)
    at /g/kde4svn/extragear/graphics/digikam/digikam/tageditdlg.cpp:168
#7  0x0000000000759db9 in Digikam::TagEditDlg::tagCreate (parent=0xd90200, album=0x0, title=..., icon=...) at /g/kde4svn/extragear/graphics/digikam/digikam/tageditdlg.cpp:292
#8  0x000000000075e287 in Digikam::TagModificationHelper::slotTagNew (this=0xe07c30, parent=<value optimized out>, title=..., iconName=...)
    at /g/kde4svn/extragear/graphics/digikam/digikam/tagmodificationhelper.cpp:83
#9  0x0000000000713481 in Digikam::DigikamView::slotNewTag (this=0xd90200) at /g/kde4svn/extragear/graphics/digikam/digikam/digikamview.cpp:670
#10 0x0000000000717b46 in Digikam::DigikamView::qt_metacall (this=0xd90200, _c=InvokeMetaMethod, _id=99, _a=0x7fff264b0cb0) at /g/build/extragear/graphics/digikam/digikam/digikamview.moc:305
#11 0x00007f3374d652e1 in QMetaObject::activate (sender=0x300af90, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0)
    at /g/kde4svn/kde-qt/src/corelib/kernel/qobject.cpp:3290
#12 0x00007f3375cc08a2 in QAction::triggered (this=0x0, _t1=false) at .moc/debug-shared/moc_qaction.cpp:263
#13 0x00007f3375cc179b in QAction::activate (this=0x300af90, event=<value optimized out>) at /g/kde4svn/kde-qt/src/gui/kernel/qaction.cpp:1255
#14 0x00007f33760fb0fa in QMenuPrivate::activateCausedStack (this=0x2ec0930, causedStack=..., action=0x300af90, action_e=Trigger, self=true) at /g/kde4svn/kde-qt/src/gui/widgets/qmenu.cpp:1011
#15 0x00007f3376101d43 in QMenuPrivate::activateAction (this=0x2ec0930, action=0x300af90, action_e=1987202976, self=<value optimized out>) at /g/kde4svn/kde-qt/src/gui/widgets/qmenu.cpp:1103
#16 0x00007f3376d937b9 in KMenu::mouseReleaseEvent (this=0x300ad60, e=0x7fff264b1b60) at /g/kde4svn/kdelibs/kdeui/widgets/kmenu.cpp:471
#17 0x00007f3375d208f9 in QWidget::event (this=0x300ad60, event=0x7fff264b1b60) at /g/kde4svn/kde-qt/src/gui/kernel/qwidget.cpp:8014
#18 0x00007f3376103eeb in QMenu::event (this=0x300ad60, e=0x7fff264b1b60) at /g/kde4svn/kde-qt/src/gui/widgets/qmenu.cpp:2414
#19 0x00007f3375cc7431 in QApplicationPrivate::notify_helper (this=0xb5f5e0, receiver=0x300ad60, e=0x7fff264b1b60) at /g/kde4svn/kde-qt/src/gui/kernel/qapplication.cpp:4300
#20 0x00007f3375cd0c9d in QApplication::notify (this=<value optimized out>, receiver=<value optimized out>, e=0x7fff264b1b60) at /g/kde4svn/kde-qt/src/gui/kernel/qapplication.cpp:3865
#21 0x00007f3376ccc47e in KApplication::notify (this=0x7fff264b25b0, receiver=0x300ad60, event=0x7fff264b1b60) at /g/kde4svn/kdelibs/kdeui/kernel/kapplication.cpp:302
#22 0x00007f3374d4f1d3 in QCoreApplication::notifyInternal (this=0x7fff264b25b0, receiver=0x300ad60, event=0x7fff264b1b60) at /g/kde4svn/kde-qt/src/corelib/kernel/qcoreapplication.cpp:704
#23 0x00007f3375ccd83a in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../include/QtCore/../../../../kde4svn/kde-qt/src/corelib/kernel/qcoreapplication.h:215
#24 QApplicationPrivate::sendMouseEvent (event=<value optimized out>, receiver=<value optimized out>) at /g/kde4svn/kde-qt/src/gui/kernel/qapplication.cpp:2965
#25 0x00007f3375d47fcd in QETWidget::translateMouseEvent (this=0x300ad60, event=<value optimized out>) at /g/kde4svn/kde-qt/src/gui/kernel/qapplication_x11.cpp:4302
#26 0x00007f3375d46cc9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff264b2310) at /g/kde4svn/kde-qt/src/gui/kernel/qapplication_x11.cpp:3501
#27 0x00007f3375d6f78a in QEventDispatcherX11::processEvents (this=<value optimized out>, flags=<value optimized out>) at /g/kde4svn/kde-qt/src/gui/kernel/qeventdispatcher_x11.cpp:132
#28 0x00007f3374d4dc42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:149
#29 0x00007f3374d4dddd in QEventLoop::exec (this=0x7fff264b2490, flags=) at /g/kde4svn/kde-qt/src/corelib/kernel/qeventloop.cpp:197
#30 0x00007f3374d51b0b in QCoreApplication::exec () at /g/kde4svn/kde-qt/src/corelib/kernel/qcoreapplication.cpp:981
#31 0x00000000007ba12c in main (argc=<value optimized out>, argv=<value optimized out>) at /g/kde4svn/extragear/graphics/digikam/digikam/main.cpp:195

Reported using DrKonqi
Comment 1 Johannes Wienke 2010-02-24 19:43:47 UTC
SVN commit 1095640 by jwienke:

Use tree views as reference for creating new albums and tags and not the current albums in the AlbumManager. Also guard against empty parent tags while creating new tags considering 0 a legal value for the creation method as stated in the comment.

BUG: 228326

Thanks for the bug report.

 M  +2 -1      NEWS  
 M  +5 -0      digikam/datefolderview.cpp  
 M  +5 -0      digikam/datefolderview.h  
 M  +5 -5      digikam/digikamview.cpp  
 M  +15 -0     digikam/leftsidebarwidgets.cpp  
 M  +6 -0      digikam/leftsidebarwidgets.h  
 M  +14 -2     digikam/tagmodificationhelper.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095640