Use tree views as reference for creating new albums and tags and not the current albums in the AlbumManager. Also guard against empty parent tags while creating new tags considering 0 a legal value for the creation method as stated in the comment.

BUG: 228326

Thanks for the bug report.

svn path=/trunk/extragear/graphics/digikam/; revision=1095640